更改相对地址，解决图片无法加载的问题

--- a/food.html
+++ b/food.html
@@ -18,19 +18,19 @@
 
     <section class="foods">
       <div class="food">
-        <img src="/image/小炒黄牛肉.jpg" width="200" height="200" />
+        <img src="image/小炒黄牛肉.jpg" width="200" height="200" />
         <h3>小炒黄牛肉</h3>
         <p>鲜香与辣劲交织的湘味代表。</p>
       </div>
 
       <div class="food">
-        <img src="/image/口味虾.jpg" width="200" height="200" />
+        <img src="image/口味虾.jpg" width="200" height="200" />
         <h3>口味虾</h3>
         <p>最地道的长沙夜宵灵魂。</p>
       </div>
 
       <div class="food">
-        <img src="/image/黑色经典.jpg" width="200" height="200" />
+        <img src="image/黑色经典.jpg" width="200" height="200" />
         <h3>臭豆腐</h3>
         <p>闻着臭、吃着香。</p>
       </div>
