--- a/memory.html
+++ b/memory.html
@@ -26,7 +26,7 @@
       <article class="story">
         <div class="story1">
           <div>
-            <img src="/image/屈原.jpg" width="200" height="200" />
+            <img src="image/屈原.jpg" width="200" height="200" />
           </div>
 
           <div>
@@ -47,7 +47,7 @@
       <article class="story">
         <div class="story2">
           <div>
-            <img src="/image/毛主席.jpg" width="250" height="170" />
+            <img src="image/毛主席.jpg" width="250" height="170" />
           </div>
 
           <div>
@@ -91,7 +91,7 @@
        <article class="story">
         <div class="story2">
           <div>
-            <img src="/image/花鼓戏.jpg" width="200" height="240" />
+            <img src="image/花鼓戏.jpg" width="200" height="240" />
           </div>
 
           <div>
