--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="cards">
       <a href="memory.html" class="card">
         <img
-          src="/image/湖湘记忆.jpg"
+          src="image/湖湘记忆.jpg"
           alt="湖湘记忆"
           width="100%"
           height="75%"
@@ -42,7 +42,7 @@
 
       <a href="scenery.html" class="card">
         <img
-          src="/image/潇湘盛景.jpg"
+          src="image/潇湘盛景.jpg"
           alt="湖湘记忆"
           width="100%"
           height="75%"
@@ -52,7 +52,7 @@
 
       <a href="food.html" class="card">
         <img
-          src="/image/湘味人间.jpg"
+          src="image/湘味人间.jpg"
           alt="湖湘记忆"
           width="100%"
           height="75%"
