--- a/scenery.html
+++ b/scenery.html
@@ -18,19 +18,19 @@
 
     <section class="gallery">
       <div class="place">
-        <img src="/image/张家界.jpg" width="200" height="200" />
+        <img src="image/张家界.jpg" width="200" height="200" />
         <h3>张家界</h3>
         <p>世界自然遗产，奇峰林立。</p>
       </div>
 
       <div class="place">
-        <img src="/image/岳阳楼.jpg" width="200" height="200" />
+        <img src="image/岳阳楼.jpg" width="200" height="200" />
         <h3>岳阳楼</h3>
         <p>“先天下之忧而忧，后天下之乐而乐”。</p>
       </div>
 
       <div class="place">
-        <img src="/image/凤凰古城.jpg" width="200" height="200" />
+        <img src="image/凤凰古城.jpg" width="200" height="200" />
         <h3>凤凰古城</h3>
         <p>烟雨吊脚楼，小城人情味。</p>
       </div>
