添加轮播，悬停效果

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title class="title">印象湖南 - 首页</title>
     <link rel="stylesheet" href="css/index.css" />
+    <script src="js/index.js"></script>
   </head>
   <body>
     <header>
@@ -29,34 +30,54 @@
 
     <section class="cards">
       <a href="memory.html" class="card">
-        <img
-          src="image/湖湘记忆.jpg"
-          alt="湖湘记忆"
-          width="100%"
-          height="75%"
-        />
-        <div>
-          <h3>湖湘记忆</h3>
+        <div class="slider">
+          <div class="slides">
+            <img src="image/湖湘记忆.jpg" class="slide" />
+            <img src="image/湖湘记忆2.jpg" class="slide" />
+            <img src="image/湖湘记忆3.jpg" class="slide" />
+          </div>
+
+          <div class="dots">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+          </div>
         </div>
+
+        <h3>湖湘记忆</h3>
       </a>
 
       <a href="scenery.html" class="card">
-        <img
-          src="image/潇湘盛景.jpg"
-          alt="湖湘记忆"
-          width="100%"
-          height="75%"
-        />
+        <div class="slider">
+          <div class="slides">
+            <img src="image/潇湘盛景.jpg" class="slide" />
+            <img src="image/潇湘盛景2.jpg" class="slide" />
+            <img src="image/潇湘盛景3.jpg" class="slide" />
+          </div>
+
+          <div class="dots">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+          </div>
+        </div>
         <h3>潇湘盛景</h3>
       </a>
 
       <a href="food.html" class="card">
-        <img
-          src="image/湘味人间.jpg"
-          alt="湖湘记忆"
-          width="100%"
-          height="75%"
-        />
+        <div class="slider">
+          <div class="slides">
+            <img src="image/湘味人间.jpg" class="slide" />
+            <img src="image/湘味人间2.jpg" class="slide" />
+            <img src="image/湘味记忆3.jpg" class="slide" />
+          </div>
+
+          <div class="dots">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+          </div>
+        </div>
         <h3>湘味人间</h3>
       </a>
     </section>
